fix gender icon src path

--- a/src/app/shared/generic-radio-button/generic-radio-button.component.html
+++ b/src/app/shared/generic-radio-button/generic-radio-button.component.html
@@ -17,10 +17,8 @@
           'male-icon': radioValue === 'male',
           'female-icon': radioValue === 'female'
         }"
-        [src]="
-          !radioValue ? '../../../assets/images/{gender}.svg' : chosenImagePath
-        "
-        alt="gender"
+        src="../../../assets/images/{{ gender }}.svg"
+        alt="{{ gender }}"
       />
     </span>
   </p>
